  an underscore instead as with two dots (like in view_text.default).
  
* Sys.tempdir() and Sys.userdir() are deprecated in favor of the new more
  general functions systemFile() and systemDir().
  
* r() is deprecated in favor of pkg() (r is not informative enough and more
  susceptible to be used elsewere too).
  
* Args() is deprecated in favor of argsTip() and CallTip() is deprecated in
  favor of callTip() (further homogeneization of svMisc function names).
  
* Complete() and CompletePlus() are deprecated in favor of a unique completion()
  function. Code of both original functions has been fused and reworked.


== Changes in svMisc 0.9-59

* RJSON objects now use a customized list() function to build lists, but also
  structures and new S4 objects.
  
* captureAll() has now a 'split' argument that allows to output to the R
  console, while capturing output.
  
* Bug correction in captureAll(): call[[1L]] is not subsettable.


== Changes in svMisc 0.9-58

* Additions of functions toRjson() and evalRjson() and specification of the
  RJSON (R-JavaScript Object Notation), an object exchange format not unlike
  JSON, but richer and more adapted to represent most R objects.


== Changes in svMisc 0.9-57

* Small changes to objList() (now look at objects in their correct environment).

* A bug in descArgs() with R >= 2.10 did not allowed to gest arguments
  description for functions using the '...' argument. Thanks to Diego Zardetto
  for pointing this bug.
  

== Changes in svMisc 0.9-56

* Temporary code to disable index.search() in devel R 2.11 in isHelp() and
  descFun().


== Changes in svMisc 0.9-55

* Implement descArgs using the new help system (parse_Rd), this eliminates
  the need for the workaround of version 0.9-54


== Changes in svMisc 0.9-54

* Cosmetic changes in Rd files to make them compatible with R 2.11 (devel). A
  part of the example of CompletePlus() is eliminated because it raises an error.
  

== Changes in svMisc 0.9-53
