@@ -29,7 +29,10 @@
   susceptible to be used elsewere too).
   
 * Args() is deprecated in favor of argsTip() and CallTip() is deprecated in
-  favor of callTip() (further homogeneization of svMisc function names).
+  favor of callTip() (further homogeneization of svMisc function names). The
+  new argsTip() and callTip() functions can reflow the tip to a given width, and
+  callTip() can also return a short description of the function as well as the
+  list of available methods if the tip os asked for a generic function.
   
 * Complete() and CompletePlus() are deprecated in favor of a unique completion()
   function. Code of both original functions has been fused and reworked.
